--- a/style.css
+++ b/style.css
@@ -1,49 +1,68 @@
-html{
-   margin: 0;
-   padding: 0;
-   
-}
-body {   
-   min-width:1140px;
+html, 
+body {
+   min-width:1440px;
    height:4470px;
    font-family: "Montserrat", sans-serif;
    font-size: 16px;
-   /*line-height: 32px;*/
+   line-height: 24px;
    color: #AE7C78;
    background-color: #E5E5E5;
-   /*background-repeat: no-repeat;
-   background-position: top center;*/
  }
-
-h1, h2{
-   font-family: "Playfair Display", serif;
-}
-
-main{
-   max-height: 608px;
-}
 
 ul{
    list-style: none;
 }
 
-.header-container{
-   top: 26px;
+header{
+   max-height: 64px;
    width: 100%;
-   height: 64px;
-   margin: 0 auto;
-   padding: 0 20px;
+   top:26px;
+   border-top: 1px solid #FFFFFF;
+   border-bottom: 1px solid #FFFFFF;
+   text-align: center;
 }
 
 .header-container li{
-  display: inline-block;
-  vertical-align: middle;
-  margin: 0 70px;
+   padding: 0 70px;
+   color: #AE7C78;
+   vertical-align: middle;
+   display: inline-block;
 }
-
+/*работает с inline-block*/
 .header-container li:first-letter{
   text-transform: capitalize;
 }
+
+
+main{
+   max-height: 4294px;
+}
+
+/*section.about-main*/
+section.about-main{
+   max-height:544px;
+   margin-bottom: 64px;
+}
+.about-main span{
+   font-style: oblique;
+   font-weight: lighter;
+   /*white-space: pre-wrap;*/
+}
+
+.about-main p{
+   font-size: 1.5em;
+}
+h1, h2{
+   font-family: "Playfair Display", serif;
+}
+
+h1{
+   font-size: 2.75em;
+}
+
+h2{
+   font-size: 2.25em;
+   }
 
 
 .main-btn {
@@ -59,36 +78,51 @@ ul{
    border-radius: 10px;
 }
 
-.features{
- padding: 120px 48px 120px 0;
- width: 120px;
- height: 108px;
- display: inline;
- margin: 0 40px; 
+/*section.features*/
+.features {
+   width: 1200px;
+   height: 108px;
+   padding: 0 120px;
+   display: inline; 
+  }
+
+/*3  colums*/
+dl{
+  float: left;
+width: 30%;
+  margin-right: 5%;
 }
 
- .feature-delivery {
-   background-image: url("images/car_icon.svg");
-   background-repeat: no-repeat;
- }
- 
- .feature-quality {
-   
-   background-image: url("images/bunch_icon.svg");
-   background-repeat: no-repeat;
- }
- 
- .feature-photo {
-   
-   background-image: url("images/photo_icon.svg");
-   background-repeat: no-repeat;
- }
+dl:nth-child(1n) {
+   margin-right: 0;  
+}
 
- .popular{
-    padding: 80px 323px 0 323px;
-    width: 794px;
-    height: 546px;
-    display: flexbox;   
+dl.feature-delivery::before{
+content: url("images/car_icon.svg");
+height: 52px;
+}
+
+dl.feature-quality::before {
+content: url("images/bunch_icon.svg");
+height: 52px;
+}
+ 
+dl.feature-photo::before {
+content: url("images/photo_icon.svg");
+height: 52px;
+}
+
+dd, dt{
+   padding-left: 80px;
+   margin: 0;
+ }
+ 
+/*section.popular*/
+section.popular{
+   padding: 40px 323px;
+   width: 794px;
+   height: 546px;
+   display: flexbox;   
 }
 
 .left-arrow{
@@ -100,24 +134,28 @@ ul{
    background-image: url("images/right_arrow.svg");
    background-repeat: no-repeat;
 }
+
+/*catalogue-parts*/
 .catalogue-parts{
-   padding: 120px 80px 120px 0;
    width: 1200px;
    height: 442px;
+   padding: 40px 120px;
+   
 }
 
+/*discount*/
 .discount{
-   padding: 120px 80px 120px 0;
+   padding: 40px 120px;
    width: 1200px;
    height: 391px;
-
+   padding: 40px 120px;
 }
 
+/*steps*/
 .steps{
-   padding: 120px 80px 120px 0;
    width: 1200px;
    height: 232px;
-
+   padding: 40px 120px;
 }
 
 .let-order{
@@ -140,11 +178,11 @@ ul{
    background-repeat: no-repeat;
 }
 
+/*news*/
 .news{
-   padding: 120px 80px 120px 0;
    width: 1200px;
    height: 460px;
-
+   padding: 40px 120px;
 }
 
 .insta{
@@ -161,20 +199,21 @@ ul{
    background-image: url("images/twitter_icon.svg");
    background-repeat: no-repeat;
 }
+
+/*responses*/
 .responses{
-   padding: 120px 80px 120px 0;
    width: 1200px;
    height: 308px;
-
+  padding: 40px 120px;
 }
 
-
+/*contacts*/
 .contacts{
-   padding: 0 80px;
-   width: 1440px;
+   padding-top: 40px;
+   width: 100%;
    height: 644px;
-   background-image: url("files/map.png");
-   background-repeat: no-repeat;
+   background: url("files/map.png") no-repeat 50% 50%;
+   background-size: 100%;
 }
 
 .how-connect{
@@ -186,13 +225,15 @@ ul{
    border-radius: 12px;
 }
 
+/*footer*/
 footer{   
    width: 100%;
    height: 75px;
    background-color: #AE7C78;
    color: #FFFFFF; 
-   margin: 0 auto;
-   padding: 0 20px;
+   }
+li{
+   color: black;
 }
 
 .footer-container li{
