--- a/CSS/style.css
+++ b/CSS/style.css
@@ -47,9 +47,8 @@ header a {
 
 .header-logo{
     position: absolute;
-    top: 6.5%;
-    left: 50%; 
     transform: translate(-50%, -50%);
+    box-sizing: border-box;
 }
 
 .menu{
@@ -210,6 +209,17 @@ section.popular{
 }
 
 /*news*/
+.news {
+   display: grid;
+   grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+   grid-auto-flow: dense;/*при перезаполнении, проверить*/
+}
+
+
+.news :first-child,
+.news :last-child {
+      grid-row: span 2;
+}
 .news .img-svg path{
    fill: #D89999;
 }
@@ -253,8 +263,8 @@ section.popular{
    opacity: 0.9;
    border-radius: 12px;
    position: absolute;
-   left: 17%;
-   bottom: 22%;
+   top: 20px;
+   left: 8em;
 }
 
 .connection h2,p{
@@ -295,10 +305,14 @@ footer .img-svg path{
 .footer-container{
    padding: 30px 120px;
    display: grid;
-   grid-template-columns: 100px 1fr 100px; 
-   column-gap: 105px;
+   grid-template-columns: 6.25em 1fr 6.25em;/*пересмотреть гибкость*/ 
+   column-gap: 6.5em;
 }
 
 .footer-container li:first-letter{
      text-transform: capitalize;
     }
+
+.footer-container li{
+   grid-template-columns: repeat(auto-fit, minmax(min-content, max-content))
+}
